placed temporary roms in their own folder

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -84,7 +84,7 @@
         <h2>Upload a File</h2>
         <!-- File upload form -->
         <form action="/upload" method="POST" enctype="multipart/form-data">
-            <input type="file" name="file" accept=".gba, .mb, .gb, .gbc" required>
+            <input type="file" name="file" accept=".gba, .mb, .gb, .gbc, .nes" required>
             <button class="w3-button w3-green" type="submit">Upload</button>
         </form>
     </section>
