modified:   views/index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -124,6 +124,7 @@
                 </li>
             <% }); %>
         </ul>
+        <p>non GBA roms file size includes the size of the emulator it will be packaged with</p>
     </section>
 </body>
 </html>
