--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,6 +69,74 @@
             padding: 10px;
             display: none; /* Initially hidden */
         }
+
+        .lds-grid {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-grid div {
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: #fff;
+  animation: lds-grid 1.2s linear infinite;
+}
+.lds-grid div:nth-child(1) {
+  top: 8px;
+  left: 8px;
+  animation-delay: 0s;
+}
+.lds-grid div:nth-child(2) {
+  top: 8px;
+  left: 32px;
+  animation-delay: -0.4s;
+}
+.lds-grid div:nth-child(3) {
+  top: 8px;
+  left: 56px;
+  animation-delay: -0.8s;
+}
+.lds-grid div:nth-child(4) {
+  top: 32px;
+  left: 8px;
+  animation-delay: -0.4s;
+}
+.lds-grid div:nth-child(5) {
+  top: 32px;
+  left: 32px;
+  animation-delay: -0.8s;
+}
+.lds-grid div:nth-child(6) {
+  top: 32px;
+  left: 56px;
+  animation-delay: -1.2s;
+}
+.lds-grid div:nth-child(7) {
+  top: 56px;
+  left: 8px;
+  animation-delay: -0.8s;
+}
+.lds-grid div:nth-child(8) {
+  top: 56px;
+  left: 32px;
+  animation-delay: -1.2s;
+}
+.lds-grid div:nth-child(9) {
+  top: 56px;
+  left: 56px;
+  animation-delay: -1.6s;
+}
+@keyframes lds-grid {
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+}
     </style>
     <script>
         // JavaScript function to toggle the visibility of rename forms
@@ -110,7 +178,7 @@
     </section>
     <!-- Shows the searching for GBA banner-->
     <div id="searchingBanner">
-        <img src="loading-spinner.gif" alt="Loading...">
+        <div class="lds-grid"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
         <h1>Searching for GBA...</h1>
     </div>
     <section class="w3-container">
@@ -128,12 +196,7 @@
                         <!-- Form for running a script on the file -->
                         <form class="w3-bar-item" action="/run-script/<%= file.name %>/<%= file.size %>" method="POST">
                             <!-- Add a loading spinner next to the button -->
-                            <button
-                                id="send-multiboot-button-<%= file.name %>"
-                                class="w3-button w3-blue"
-                                onclick='sendMultiboot()'
-                                <%= file.size > 256 ? 'disabled' : '' %>
-                            >
+                            <button id="send-multiboot-button-<%= file.name %>" class="w3-button w3-blue" onclick='sendMultiboot()' <%= file.size > 256 ? 'disabled' : '' %>>
                                 Send MultiBoot
                             </button>
                             <img id="loading-spinner" src="loading-spinner.gif" alt="Loading..." style="display: none;">
