Made the loading screen look better

--- a/views/searching.ejs
+++ b/views/searching.ejs
@@ -35,8 +35,9 @@
     <header class="w3-container w3-green">
       <h1>GBA MultiBoot Server</h1>
     </header>
-    <h2>Rom title: <%= filename %></h2>
-    <h2 id="fileSize"><%= fileSize %></h2>
+    <h2>Rom Title: <%= filename %></h2>
+    <h2>File Size: <%= fileSize %> KB</h2>
+    <h2 hidden id="fileSize"><%= fileSize %></h2>
 
     <div class="w3-container">
       <div class="w3-light-grey">
